tests/NormalTests/paczka1/fuzzy1/11416351.err
Error in line 25: BYsnIqI S477 83,9
Error in line 27: BYsnIqI A323 71,0
Error in line 19: A323 S675 90,4
Error in line 16: zPO S477 16,3
Error in line 35: eHm S477 96,6
